# CPU-Profiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: macos-cmake-build.yml
src/Consumption/: BaseWorker.cpp  BaseWorker.h  ConsumptionManager.cpp  ConsumptionManager.h  CoresConsumption.cpp  CoresConsumption.h  TotalConsumption.cpp  TotalConsumption.h
src/Shader/: Shader.cpp  Shader.h
src/Utilities/: Constants.h
